<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layout_toolbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp">

        <Button
            android:id="@+id/btn_tool_collect"
            android:drawableTop="@drawable/collection"
            android:drawablePadding="8dp"
            android:background="@color/colorWhite"
            android:text="@string/collect"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_tool_list"
            android:drawableTop="@drawable/list"
            android:drawablePadding="8dp"
            android:background="@color/colorWhite"
            android:text="@string/list"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_tool_screen"
            android:drawableTop="@drawable/screen"
            android:drawablePadding="8dp"
            android:background="@color/colorWhite"
            android:text="@string/screen"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_tool_nopic"
            android:drawableTop="@drawable/nopic"
            android:drawablePadding="8dp"
            android:background="@color/colorWhite"
            android:text="@string/nopic"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/btn_tool_home"
            android:drawableTop="@drawable/home"
            android:drawablePadding="8dp"
            android:background="@color/colorWhite"
            android:text="@string/setHome"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_tool_share"
            android:drawableTop="@drawable/share"
            android:drawablePadding="8dp"
            android:background="@color/colorWhite"
            android:text="@string/share"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_tool_reload"
            android:drawableTop="@drawable/reload"
            android:drawablePadding="8dp"
            android:background="@color/colorWhite"
            android:text="@string/reload"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_tool_exit"
            android:drawableTop="@drawable/exit"
            android:drawablePadding="8dp"
            android:background="@color/colorWhite"
            android:text="@string/exit"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_tool_down"
        android:src="@drawable/down"
        android:background="#FFFFFF"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>