<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leoxk.novelbrowser.ui.MainActivity">

    <RelativeLayout
        android:id="@+id/main_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fefefe"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/tv_main_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="54dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:background="@color/lightGrey"
            android:maxLines="1"
            android:padding="8dp"
            android:paddingStart="15dp"
            android:text="@string/searchHint" />

        <ImageButton
            android:id="@+id/btn_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_main_title"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/tv_main_title"
            android:layout_marginStart="12dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@color/lightGrey"
            app:srcCompat="@drawable/read" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/search"
            android:id="@+id/imageView"
            android:layout_alignTop="@+id/tv_main_title"
            android:layout_alignEnd="@+id/tv_main_title" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/pb_main"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_below="@+id/main_head"
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <RelativeLayout
        android:id="@+id/reading_search"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="#fefefe"
        android:layout_alignTop="@id/pb_main"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/et_reading_search"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btn_previous"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/btn_cancel"
            android:layout_toStartOf="@+id/btn_previous"
            android:background="@color/lightGrey"
            android:hint="@string/findHint"
            android:maxLines="1"
            android:padding="8dp"
            android:paddingStart="15dp"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/et_reading_search"
            android:layout_alignParentStart="true"
            android:layout_marginStart="12dp"
            android:background="#fefefe"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:text="@string/cancel"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="#fefefe"
            app:srcCompat="@drawable/next"
            android:layout_alignParentEnd="true" />
        <ImageButton
            android:id="@+id/btn_previous"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="#fefefe"
            app:srcCompat="@drawable/previous"
            android:layout_toStartOf="@+id/btn_next" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/reading_search">

        <fragment
            android:id="@+id/webview_fragment"
            android:name="com.leoxk.novelbrowser.ui.WebviewFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/fragment_webview"/>
    </FrameLayout>


    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="12dp"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/btn_main_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back" >
            </ImageButton>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/btn_main_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/forward" >
            </ImageButton>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/btn_main_toolbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toolbox" >
            </ImageButton>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/btn_main_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/home" >
            </ImageButton>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
